revert Dockerfile